Last Push with Rearranging and modifie all code

--- a/style.css
+++ b/style.css
@@ -4,32 +4,23 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
     font-family: 'Ubuntu', sans-serif;
 }
+
+small{
+    padding-bottom: 25px;
+    color: rgba(243, 38, 38, 0.918);
+}
+
+form{
+    padding-top: 20px;
+}
+
+
 .first-section{
     background-image: url(images/donation4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
     width: auto;
-}
-#first-div{
-    text-align: center;
-    padding: 130px;
-}
-.header-color{
-    color: rgba(243, 38, 38, 0.918);
-    font-size: large;
-}
-.header-size{
-    font-size: 70px;
-    color: rgb(253, 254, 254);
-}
-
-#second-header{
-    font-size: 40px;
-}
-small{
-    padding-bottom: 25px;
-    color: rgba(243, 38, 38, 0.918);
 }
 
 .button{
@@ -63,6 +54,51 @@ small{
         text-align: center;
         margin: 10px;
 }
+
+.header-color{
+    color: rgba(243, 38, 38, 0.918);
+    font-size: large;
+}
+.header-size{
+    font-size: 70px;
+    color: rgb(253, 254, 254);
+}
+
+.img{
+    padding-right: 130px;
+    padding-top: 5px;
+}
+
+.padding-container{
+    padding-bottom: 60px;
+    margin-bottom: 70px;
+}
+
+.class-footer{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    background-color: rgb(12, 2, 2);
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    font-style:italic;
+}
+
+
+
+#first-div{
+    text-align: center;
+    padding: 130px;
+}
+
+
+#second-header{
+    font-size: 40px;
+}
+
+
+
 
 #second-section{
     text-align: center;
@@ -116,10 +152,7 @@ small{
     margin: 10px;
 }
 
-.img{
-    padding-right: 130px;
-    padding-top: 5px;
-}
+
 
 
 #optional-section-one{
@@ -128,9 +161,7 @@ small{
 }
 
 
-form{
-    padding-top: 20px;
-}
+
 #suscribe{
     background-color: rgb(254, 86, 86);
     font-size: 15px;
@@ -142,30 +173,25 @@ form{
     margin-right: 350px;
 }
 
-.class-footer{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-    background-color: rgb(12, 2, 2);
-    margin-left: 15px;
-    margin-right: 15px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-}
+
 #f-heading{
     color: aliceblue;
-}
-.padding-container{
-    padding-bottom: 60px;
-    margin-bottom: 70px;
 }
 
 #text-div{
     text-align: center;
-    padding-top: 100px;
+    padding-top: 80px;
+    margin: 40px;
 }
 
 #img-tag{
     height: 300px;
     width: 600px;
+}
+
+#textarea{
+    text-align: center;
+    border: 0px;
+    border-bottom: 2px solid black;
 }
 
